--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                   type="text"
                   id="first_name"
                   name="first_name"
-                  placeholder="Enter you first Name"
+                  placeholder="John/Jane"
                 />
                 <i class="fa-solid fa-circle-check"></i>
                 <i class="fa-solid fa-circle-exclamation"></i>
@@ -51,7 +51,7 @@
                   type="text"
                   id="last_name"
                   name="last_name"
-                  placeholder="Enter you last Name"
+                  placeholder="Doe"
                 />
                 <i class="fa-solid fa-circle-check"></i>
                 <i class="fa-solid fa-circle-exclamation"></i>
@@ -65,8 +65,7 @@
                   type="email"
                   id="email"
                   name="email"
-                  pattern="([a-zA-Z0-9\\_\\-\\.]+)@([a-zA-Z]+).(.+)"
-                  placeholder="Enter a valid email address"
+                  placeholder="hello@example.com"
                 />
                 <i class="fa-solid fa-circle-check"></i>
                 <i class="fa-solid fa-circle-exclamation"></i>
@@ -79,8 +78,7 @@
                   type="number"
                   id="phone"
                   name="phone"
-                  pattern=".?(\\d{3}).*(\\d{3}).*(\\d{4})"
-                  placeholder="Enter a valid phone number"
+                  placeholder="123-123-1234"
                 />
                 <i class="fa-solid fa-circle-check"></i>
                 <i class="fa-solid fa-circle-exclamation"></i>
